ADD_SUBDIRECTORY(msque ${Hemsleya_bin_path}//test//concurrent//container//msque)
ADD_SUBDIRECTORY(optimistic_queue ${Hemsleya_bin_path}//test//concurrent//container//optimistic_queue)
ADD_SUBDIRECTORY(swapque ${Hemsleya_bin_path}//test//concurrent//container//swapque)
ADD_SUBDIRECTORY(testbase ${Hemsleya_bin_path}//test//concurrent//container//testbase)